rust/foxglove-ws-protocol/src/server/snapshots/foxglove_ws_protocol__server__status__tests__encode.snap
---
source: src/server/status.rs
expression: message()
---
{
  "op": "status",
  "level": 1,
  "message": "Oh no",
  "id": "status-123"
}
