rust/foxglove-ws-protocol/src/server/snapshots/foxglove_ws_protocol__server__status__tests__encode_with_id.snap
---
source: rust/foxglove-ws-protocol/src/server/status.rs
expression: message_with_id()
---
{
  "op": "status",
  "level": 1,
  "message": "Oh no",
  "id": "my-id"
}
